Migrate tests to not check formatting